# Ligand-binding-prediction-UPF

./: .gitignore  README.md  generate_training_data.py  grid.py  inferencia2.py  obtener_prots.py  pyproject.toml  random_forest.py  training2.py
python_project/: elegir_protes_analisis.py  generate_training_data.py  grid.py  inference.py  inferencia2.py  obtener_prots.py  random_forest.py  random_forest_def.py  training2.py
tests/: binding_site_evaluation.ipynb  inferencia_modified.py
tests/predictions/: 2y7x_protein_binding_site_residues.txt  2y82_protein_binding_site_residues.txt  3qs4_protein_binding_site_residues.txt  3qzt_protein_binding_site_residues.txt  3rf5_protein_binding_site_residues.txt  3s1h_protein_binding_site_residues.txt  4awi_protein_binding_site_residues.txt  4c1g_protein_binding_site_residues.txt  4ehg_protein_binding_site_residues.txt  4x6i_protein_binding_site_residues.txt  4zam_protein_binding_site_residues.txt  5al4_protein_binding_site_residues.txt  5e7n_protein_binding_site_residues.txt  5fqb_protein_binding_site_residues.txt  5h19_protein_binding_site_residues.txt  5jm4_protein_binding_site_residues.txt  5vqu_protein_binding_site_residues.txt
