[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
dependencies = [
    "biopython>=1.86",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    # ME SALE QUE NO TENGO sklearn 
    "sklearn>=",
    "joblib>=1.5.3",
    # TAMPOCO TENGO ESTOS
    "request>=",
    "random>=",
    "rdkit>="
]

[tool.setuptools.packages.find]
where = ["."]
include = ["myproject*"]
