[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Ligand-binding-prediction-UPF"
version = "0.1.0"
description = "Machine Learning pipeline for protein binding site prediction using geometric and physicochemical descriptors."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Júlia Conchillo and Leyre Roca"}]
dependencies = [
    "biopython>=1.86",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "joblib>=1.5.3",   
    "rdkit>=2025.9.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python_project*"]
